# Credit-Card-Customer-Segmentation

./: EDA_Geetha.ipynb  main.py  preprocessing.ipynb  pyproject.toml
