[project]
name = "credit-card-customer-segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudpickle>=3.1.2",
    "fastapi>=0.139.2",
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.1",
    "mlflow>=3.14.0",
    "numpy>=2.5.1",
    "pandas>=2.3.3",
    "plotly>=6.9.0",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "streamlit>=1.60.0",
    "uvicorn>=0.51.0",
]
